--- a/src/app/logger-widget/logger-widget.component.html
+++ b/src/app/logger-widget/logger-widget.component.html
@@ -2,7 +2,7 @@
   <div class="input-group-prepend">
     <label class="input-group-text" for="log-level-setter">Log Level</label>
   </div>
-  <select id="log-level-setter" [ngModel]="selectedLevel" name="log-level-setter"
+  <select id="log-level-setter" [(ngModel)]="selectedLevel" name="log-level-setter"
     class="custom-select" (ngModelChange)="setGlobalLogLevel($event)">
     <option *ngFor="let level of levels" [value]="level.value">{{level.name}}</option>
   </select>
