reworked logger widget

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-game-master></app-game-master>
+<app-logger-widget (develModeEmitter)="develModeHandler($event);"></app-logger-widget>
+<app-game-master [develMode]="develMode"></app-game-master>
