--- a/src/app/logger-widget/logger-widget.component.html
+++ b/src/app/logger-widget/logger-widget.component.html
@@ -1,9 +1,11 @@
-<div class="input-group mb-3 logger-widget">
-  <div class="input-group-prepend">
-    <label class="input-group-text" for="log-level-setter">Log Level</label>
-  </div>
-  <select id="log-level-setter" [(ngModel)]="selectedLevel" name="log-level-setter"
-    class="custom-select" (ngModelChange)="setGlobalLogLevel($event)">
+<div id="logger-widget">
+  <label for="log-level-setter">Log Level</label>
+  <select id="log-level-setter" [(ngModel)]="selectedLevel" name="log-level-setter" class="custom-select"
+    (ngModelChange)="setGlobalLogLevel($event)">
     <option *ngFor="let level of levels" [value]="level.value">{{level.name}}</option>
   </select>
+  &nbsp;
+  <button (click)="toggleDevelMode(develMode)">
+    {{develMode? "Disable" : "Enable"}} Development Mode
+  </button>
 </div>
