--- a/src/app/game-master/game-master.component.html
+++ b/src/app/game-master/game-master.component.html
@@ -6,5 +6,11 @@
   <p *ngIf="state">Current state: {{state.state}}</p>
 </div>
 <div *ngIf="state">
-  <p>Game view here...</p>
+  <p *ngIf="state.state === 'unauthenticated'">Awaiting game to start...</p>
+  <app-sign-in *ngIf="state.state === 'ready' && playerUid === ''"
+    [develMode]="develMode" (playerUidEmitter)="playerUidHandler($event)">
+  </app-sign-in>
+  <p *ngIf="state.state === 'ready' && playerUid !== ''">
+    Tell other participants to hurry it up...
+  </p>
 </div>
