--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -1,1 +1,3 @@
-<p>game-play works!</p>
+<initial-phrase *ngIf="setView() === 'initial'"></initial-phrase>
+<atrament *ngIf="setView() === 'sketch'" [saveButtonName]="'Submit'" (saveImageEmitter)="saveImageHandler($event)"></atrament>
+<guess-phrase *ngIf="setView() === 'guess'"></guess-phrase>
