[skip ci] began implementing initial-phrase component

--- a/src/app/initial-phrase/initial-phrase.component.html
+++ b/src/app/initial-phrase/initial-phrase.component.html
@@ -1,1 +1,7 @@
-<p>initial-phrase works!</p>
+<div>
+  <form (submit)="onSubmit()" #submitForm="ngForm">
+    <label>Enter phrase</label>
+    <input id="initial-phrase" name="initial-phrase" [(ngModel)]="initialPhrase" required />
+    <button type="submit" [disabled]="submitForm.form.invalid">Submit</button>
+  </form>
+</div>
