--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-logger-widget (develModeEmitter)="develModeHandler($event);"></app-logger-widget>
+<!-- <app-logger-widget (develModeEmitter)="develModeHandler($event);"></app-logger-widget> -->
 <app-game-master [develMode]="develMode"></app-game-master>
