--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -1,4 +1,4 @@
-<p>Making guesses for: {{originPlayer? originPlayer : playerUid}}</p>
+<!-- <p>Making guesses for: {{originPlayer? originPlayer : playerUid}}</p> -->
 <initial-phrase *ngIf="view === 'initial'" (initialPhraseEmitter)="initialPhraseHandler($event)"></initial-phrase>
 <sketch-phrase *ngIf="view === 'sketch'" [state]="state" [playerUid]="playerUid" (sketchPhraseEmitter)="contentEmitterHandler($event)" (originPlayerEmitter)="originPlayerEmitterHandler($event)"></sketch-phrase>
 <guess-phrase *ngIf="view === 'guess'" [state]="state" [playerUid]="playerUid" (guessPhraseEmitter)="contentEmitterHandler($event)" (originPlayerEmitter)="originPlayerEmitterHandler($event)"></guess-phrase>
