--- a/src/app/sketch-phrase/sketch-phrase.component.html
+++ b/src/app/sketch-phrase/sketch-phrase.component.html
@@ -2,5 +2,5 @@
   <div id="previous-phrase">
     <p>Draw: {{previousPhrase}}</p>
   </div>
-  <atrament [saveButtonName]="'Submit'" (saveImageEmitter)="saveImageHandler($event)"></atrament>
+  <atrament [saveButtonName]="'Submit'" [sketchHeight]="sketchpadSize" [sketchWidth]="sketchpadSize" (saveImageEmitter)="saveImageHandler($event)"></atrament>
 </div>
